--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==6.7
 cycler==0.10.0
 Flask==1.0.2
 Flask-RESTful==0.3.6
+gunicorn==19.8.1
 itsdangerous==0.24
 Jinja2==2.10
 kiwisolver==1.0.1
