--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ backports.functools-lru-cache==1.5
 click==6.7
 cycler==0.10.0
 Flask==1.0.2
+Flask-Cors==3.0.4
 Flask-RESTful==0.3.6
 gunicorn==19.8.1
 itsdangerous==0.24
