--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ cycler==0.10.0
 Flask==1.0.2
 Flask-Cors==3.0.4
 Flask-RESTful==0.3.6
+get==1.0.3
+gevent==1.3.4
+greenlet==0.4.13
 gunicorn==19.8.1
 itsdangerous==0.24
 Jinja2==2.10
@@ -14,9 +17,13 @@ matplotlib==2.2.2
 numpy==1.14.4
 pandas==0.23.0
 patsy==0.5.0
+post==1.0.2
+public==1.0.3
 pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
+query-string==1.0.2
+request==1.0.2
 scipy==1.1.0
 six==1.11.0
 statsmodels==0.9.0
