--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ numpy==1.14.4
 pandas==0.23.0
 patsy==0.5.0
 post==1.0.2
+prometheus-client==0.3.1
 public==1.0.3
 pyparsing==2.2.0
 python-dateutil==2.7.3
@@ -28,4 +29,5 @@ scipy==1.1.0
 six==1.11.0
 statsmodels==0.9.0
 subprocess32==3.5.1
+uWSGI==2.0.17.1
 Werkzeug==0.14.1
