--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ click==6.7
 cycler==0.10.0
 Flask==1.0.2
 Flask-Cors==3.0.4
+Flask-PyMongo==2.1.0
 Flask-RESTful==0.3.6
 get==1.0.3
 gevent==1.3.4
@@ -20,6 +21,7 @@ patsy==0.5.0
 post==1.0.2
 prometheus-client==0.3.1
 public==1.0.3
+pymongo==3.7.1
 pyparsing==2.2.0
 python-dateutil==2.7.3
 pytz==2018.4
