initialize mongo db on reset

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,4 +15,6 @@ services:
         environment:
           MONGO_INITDB_ROOT_USERNAME: root
           MONGO_INITDB_ROOT_PASSWORD: example
-          MONGO_INITDB_DATABASE: 'pase'
+          MONGO_INITDB_DATABASE: pase
+        volumes:
+            - ./init_mongodb:/docker-entrypoint-initdb.d
