--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 aniso8601==3.0.0
 backports.functools-lru-cache==1.5
+certifi==2018.8.24
+chardet==3.0.4
 click==6.7
 cycler==0.10.0
 Flask==1.0.2
@@ -10,6 +12,7 @@ get==1.0.3
 gevent==1.3.4
 greenlet==0.4.13
 gunicorn==19.8.1
+idna==2.7
 itsdangerous==0.24
 Jinja2==2.10
 kiwisolver==1.0.1
@@ -27,9 +30,11 @@ python-dateutil==2.7.3
 pytz==2018.4
 query-string==1.0.2
 request==1.0.2
+requests==2.19.1
 scipy==1.1.0
 six==1.11.0
 statsmodels==0.9.0
 subprocess32==3.5.1
+urllib3==1.23
 uWSGI==2.0.17.1
 Werkzeug==0.14.1
