--- a/requirements.txt
+++ b/requirements.txt
@@ -27,6 +27,7 @@ public==1.0.3
 pymongo==3.7.1
 pyparsing==2.2.0
 python-dateutil==2.7.3
+python-magic==0.4.15
 pytz==2018.4
 query-string==1.0.2
 request==1.0.2
