--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aniso8601==3.0.0
+APScheduler==3.5.3
 backports.functools-lru-cache==1.5
 certifi==2018.8.24
 chardet==3.0.4
@@ -8,6 +9,8 @@ Flask==1.0.2
 Flask-Cors==3.0.4
 Flask-PyMongo==2.1.0
 Flask-RESTful==0.3.6
+funcsigs==1.0.2
+futures==3.2.0
 get==1.0.3
 gevent==1.3.4
 greenlet==0.4.13
@@ -36,6 +39,7 @@ scipy==1.1.0
 six==1.11.0
 statsmodels==0.9.0
 subprocess32==3.5.1
+tzlocal==1.5.1
 urllib3==1.23
 uWSGI==2.0.17.1
 Werkzeug==0.14.1
