add model_inputs volume

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,6 +6,7 @@ services:
             - ./src:/app/
             - ./datasets:/datasets/
             - ./trained_models:/trained_models/
+            - ./model_inputs:/model_inputs/
         ports:
             - "8888:80"
         depends_on:
