--- a/requirements.txt
+++ b/requirements.txt
@@ -21,13 +21,14 @@ Jinja2==2.10
 kiwisolver==1.0.1
 MarkupSafe==1.0
 matplotlib==2.2.2
+mongoengine==0.15.3
 numpy==1.14.4
 pandas==0.23.0
 patsy==0.5.0
 post==1.0.2
 prometheus-client==0.3.1
 public==1.0.3
-pymongo==3.7.1
+pymongo==3.7.2
 pyparsing==2.2.0
 python-dateutil==2.7.3
 python-magic==0.4.15
