--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ certifi==2018.8.24
 chardet==3.0.4
 click==6.7
 cycler==0.10.0
+Cython==0.29
 Flask==1.0.2
 Flask-Cors==3.0.4
 Flask-PyMongo==2.1.0
@@ -30,12 +31,14 @@ prometheus-client==0.3.1
 public==1.0.3
 pymongo==3.7.2
 pyparsing==2.2.0
+pyramid-arima==0.8.1
 python-dateutil==2.7.3
 python-magic==0.4.15
 pytz==2018.4
 query-string==1.0.2
 request==1.0.2
-requests==2.19.1
+requests==2.20.0
+scikit-learn==0.20.0
 scipy==1.1.0
 six==1.11.0
 statsmodels==0.9.0
